test/error/ast/ArrayItemToNotArray.mod
MODULE ArrayItemToNotArray;
VAR i: INTEGER;
BEGIN
  i := i[0];
END ArrayItemToNotArray.
